# CPP_Exercises

TP1/: CMakeLists.txt  helloworld.cpp
src/: ArrayNode.hpp  Card.hpp  IntLeaf.hpp  Kid.hpp  Kitchen.hpp  Leaf.hpp  Monster.hpp  Node.cpp  Node.hpp  ObjectNode.hpp  PC.h  Plush.hpp  PlushStore.hpp  Pokeball.h  Pokemon.h  Spell.hpp  StringLeaf.hpp  Trainer.h  Trap.hpp  ex1.cpp  ex1.hpp  ex3.hpp  image.hpp  pixels.hpp  translator.cpp
tests/: Tests-01-Units.cpp  Tests-0105-image-io.cpp  Tests-02-procedural-images.cpp  test-14.cpp
